--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oswald" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="java/jquery.lettering.js"></script>
-<script src="java/jquery.textillate.js"></script>
-<script src="java/main.js"></script>
+<script src="Java/jquery.lettering.js"></script>
+<script src="Java/jquery.textillate.js"></script>
+<script src="Java/main.js"></script>
 
 </head>
 
